[package]
name = "wallet_ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex="0.4.3"
primitive-types="0.12.1"
secp256k1="0.26.0"
ripemd="0.1.3"
sha256="1.1.2"
sha3="0.7.2"
rand="0.8.5"
ring="0.16.20"

[profile.release]
strip=true
opt-level="s"